src/styles/_hcard.scss
.card {
  border: 0;
  border-radius: 0;
  border-bottom: 2px solid $border-colour;
  position: relative;
  top: 15px;

  @media (min-width: 992px){
    position: static;
  }

  .card-heading-group {
    background-color: $vcard-heading-bg-colour;
    color: white;
    height: $card-heading-height;

    h2 {
      padding-top: 50px;
      font-size: 1.2rem;

      @media(min-width: 992px){
        font-size: 2rem;
      }
    }
  }

  img {
    width: $avatar-width;
    height: auto;
    float:right;
    position: relative;
    top: 10px;
    border: 1px solid $border-colour;
    border-bottom: 2px solid $border-colour;
  }

  .card-body {
    padding: $card-padding;

    .title {
      color: $secondary-text-colour;
      text-transform: uppercase;
      letter-spacing: -1px;
    }

    .underline {
      display: block;
      border-bottom: 1px solid $border-colour;
      min-height: 32px;
      line-height: 2rem;
    }
  }
}

